# IgFold

./: .gitignore  IgFold.ipynb  LICENSE.md  MANIFEST.in  README.md  requirements.txt  setup.cfg
igfold/: IgFoldRunner.py  __init__.py
igfold/model/: IgFold.py  interface.py
igfold/model/components/: GraphTransformer.py  IPABlock.py  IPATransformer.py  TriangleGraphTransformer.py  TriangleMultiplicativeModule.py  __init__.py
igfold/refine/: openmm_ref.py  pyrosetta_ref.py
igfold/resources/: vocab.txt
igfold/training/: utils.py
igfold/utils/: ab_metrics.py  abnumber_.py  anarci_.py  constants.py  coordinates.py  embed.py  fasta.py  folding.py  general.py  geometry.py  pdb.py  tensor.py  transforms.py  visualize.py
