[metadata]
name = igfold
version = 0.1.0
long-description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    antiberty>=0.0.4
    biopython>=1.79
    invariant-point-attention>=0.1.4
    pytorch-lightning>=1.5.10
    pytorch3d
    tokenizers>=0.11.6
    torch>=1.7.1
    torch-optimizer>=0.1.0
    transformers>=4.18.0
include_package_data = True