[metadata]
name = igfold
version = 0.4.0
long-description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    antiberty>=0.1.1
    biopython>=1.79
    einops>=0.3.0
    pytorch-lightning>=1.5.10,<1.9.0
    torch>=1.7.1
include_package_data = True